Fix bugs of spacing

--- a/_sass/components/_sections.scss
+++ b/_sass/components/_sections.scss
@@ -38,7 +38,7 @@
             position: absolute;
             left: 0;
             right: 0;
-            bottom: -22px;
+            bottom: -26px;
             margin: auto;
             text-align: center;
         }
